<project>
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.teletha</groupId>
	<artifactId>sinobu</artifactId>
	<version>4.11.1</version>
	<packaging>jar</packaging>
	<name>sinobu</name>
	<description>Sinobu is not obsolete framework but utility, which can manipulate objects as a extremely-condensed facade.
This is extremely lightweight at approximately 120 KB without relying on other libraries, and its various operations are designed to run as fast as other competing libraries.

This library aims to simplify and highly condense the functions related to domains that are frequently encountered in real-world development projects, making them easier to use.
- [Dependency Injection](https://en.wikipedia.org/wiki/Dependency_injection)
- Object lifecycle management
- Property based object modeling
- HTTP(S) Client
- Web Socket Client
- [JSON](https://en.wikipedia.org/wiki/JSON)
- [HTML](https://en.wikipedia.org/wiki/HTML) (including Tag Soup)
- [XML](https://en.wikipedia.org/wiki/XML)
- Reactive Programming ([Rx](http://reactivex.io))
- Asynchronous &amp; Parallel processing
- Multilingualization
- Template Engine ([Mustache](https://mustache.github.io/mustache.5.html))
- Dynamic plug-in mechanism
- Object Persistence
- Logging (Garbage-Free)
- Virtual Job Scheduler
- [Cron](https://en.wikipedia.org/wiki/Cron) Scheduling

With a few exceptions, Sinobu and its APIs are designed to be simple to use and easy to understand by adhering to the following principles.
- Keep it stupid simple
- Less is more
- Type safety
- Refactoring safety</description>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>
	<dependencies>
		<dependency>
			<groupId>com.pgs-soft</groupId>
			<artifactId>HttpClientMock</artifactId>
			<version>1.0.0</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.teletha</groupId>
			<artifactId>antibug</artifactId>
			<version>1.13.1</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.github.spullara.mustache.java</groupId>
			<artifactId>compiler</artifactId>
			<version>0.9.14</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.lmax</groupId>
			<artifactId>disruptor</artifactId>
			<version>3.4.4</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.alibaba.fastjson2</groupId>
			<artifactId>fastjson2</artifactId>
			<version>2.0.57</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.13.1</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.htmlcleaner</groupId>
			<artifactId>htmlcleaner</artifactId>
			<version>2.29</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.19.0</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.module</groupId>
			<artifactId>jackson-module-afterburner</artifactId>
			<version>2.19.0</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>8.0.1</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>com.samskivert</groupId>
			<artifactId>jmustache</artifactId>
			<version>1.16</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.20.1</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>3.0.0-beta3</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.5.18</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>io.reactivex.rxjava3</groupId>
			<artifactId>rxjava</artifactId>
			<version>3.1.10</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
		<dependency>
			<groupId>org.tinylog</groupId>
			<artifactId>tinylog-impl</artifactId>
			<version>2.8.0-M1</version>
			<scope>test</scope>
			<exclusions/>
		</dependency>
	</dependencies>
	<repositories>
		<repository>
			<id>Maven</id>
			<name>repo1.maven.org</name>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>JitPack</id>
			<name>jitpack.io</name>
			<url>https://jitpack.io/</url>
		</repository>
	</repositories>
	<url>https://github.com/teletha/sinobu</url>
	<scm>
		<url>https://github.com/teletha/sinobu</url>
		<connection>scm:git:https://github.com/teletha/sinobu.git</connection>
		<developerConnection>scm:git:https://github.com/teletha/sinobu.git</developerConnection>
	</scm>
	<issueManagement>
		<system>github</system>
		<url>https://github.com/teletha/sinobu/issues</url>
	</issueManagement>
	<developers>
		<developer>
			<name>teletha</name>
			<email/>
			<url>https://github.com/teletha</url>
		</developer>
	</developers>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<release>24</release>
					<encoding>UTF-8</encoding>
					<compilerId>javac</compilerId>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.2</version>
				<configuration>
					<argLine>-ea   -Dfile.encoding=UTF-8</argLine>
					<reportFormat>plain</reportFormat>
					<consoleOutputReporter>
						<disable>true</disable>
					</consoleOutputReporter>
					<statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoTreeReporter"/>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>me.fabriciorby</groupId>
						<artifactId>maven-surefire-junit5-tree-reporter</artifactId>
						<version>1.4.0</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.11.2</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>